--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   provider: ^5.0.0
   shared_preferences: ^2.0.5
   dio: ^4.0.0
+  sensors: ^2.0.0
+  animate_do: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -75,17 +77,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: RedHatDisplay
+      fonts:
+        - asset: fonts/RedHatDisplay-Regular.ttf
+        - asset: fonts/RedHatDisplay-Medium.ttf
+          weight: 500
+        - asset: fonts/RedHatDisplay-Bold.ttf
+          weight: 700
+        - asset: fonts/RedHatDisplay-Black.ttf
+          weight: 800
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
