--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   dio: ^4.0.0
   sensors: ^2.0.0
   animate_do: ^2.0.0
+  glassmorphism: ^2.0.1
+  flutter_svg: ^0.22.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -62,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -87,6 +89,9 @@ flutter:
           weight: 700
         - asset: fonts/RedHatDisplay-Black.ttf
           weight: 800
-
+    - family: Micr
+      fonts:
+        - asset: fonts/micr.ttf
+          weight: 500
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
